--- a/Yandex.Contest.20/F. Good Strings.ipynb
+++ b/Yandex.Contest.20/F. Good Strings.ipynb
@@ -1,31 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "7710c818",
+   "cell_type": "markdown",
+   "id": "c26c1365-4593-4459-bda1-156df59e71c7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nF. Хорошие строки\\nНазовем строку хорошей, если в ней нет двух соседних букв, которые различаются только регистром. \\nНапример, строка «abba» хорошая, а строка «aBba» нет. \\nСо строкой можно делать преобразование: если два соседних символа обозначают одну и ту же букву, \\nно записаны в разных регистрах, то их можно удалить. При этом строка «схлопнется», то есть пробелов при удалении не образуется.\\nЦепочкой таких преобразований можно превратить любую строку в хорошую. По заданной строке найдите хорошую строку, \\nв которую ее можно превратить. Вы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\\n\\nФормат ввода\\nНа вход подаётся строка, состоящая из больших и маленьких латинских букв. Длина строки не превосходит 10**5.\\nФормат вывода\\nВыведите хорошую строку, в которую можно превратить данную.\\n\\nПример 1\\nВвод\\nvxOoOoVvx\\nВывод\\nvxx\\n\\nПример 2\\nВвод\\nabBa\\nВывод\\naa\\n\\nПример 3\\nВвод\\nAbBa\\nВывод\\n\\n'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
-    "F. Хорошие строки\n",
+    "<h1>Хорошие строки</h1>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "87d63fbf-dffb-4dab-8fdb-87b6f278aefe",
+   "metadata": {},
+   "source": [
     "Назовем строку хорошей, если в ней нет двух соседних букв, которые различаются только регистром. \n",
     "Например, строка «abba» хорошая, а строка «aBba» нет. \n",
     "Со строкой можно делать преобразование: если два соседних символа обозначают одну и ту же букву, \n",
     "но записаны в разных регистрах, то их можно удалить. При этом строка «схлопнется», то есть пробелов при удалении не образуется.\n",
     "Цепочкой таких преобразований можно превратить любую строку в хорошую. По заданной строке найдите хорошую строку, \n",
-    "в которую ее можно превратить. Вы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\n",
+    "в которую ее можно превратить.\n",
     "\n",
     "Формат ввода\n",
     "На вход подаётся строка, состоящая из больших и маленьких латинских букв. Длина строки не превосходит 10**5.\n",
@@ -47,36 +40,30 @@
     "Пример 3\n",
     "Ввод\n",
     "AbBa\n",
-    "Вывод\n",
-    "\n",
-    "\"\"\""
+    "Вывод\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aba83358",
+   "cell_type": "markdown",
+   "id": "fcb69eec-167c-4fb8-99cd-f3fa95ba3b05",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "будем проходить по строке со второго элемента и сравнивать его с пердыдущим. Если окажется что они отличаются регистром, \n",
+    "<h2>Решение</h2>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "a2350e29-456d-4765-a7e3-dadeb07db700",
+   "metadata": {},
+   "source": [
+    "Будем проходить по строке со второго элемента и сравнивать его с пердыдущим. Если окажется что они отличаются регистром, \n",
     "то создадим новую строку удалив из нее найденную пару и будем проверять для нее то же самое рекурсивно. \n",
-    "для проверки будем использовать метод str.lower().\n",
-    "\"\"\""
+    "для проверки будем использовать метод str.lower()."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9310ba4c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "bbe9f3b5",
    "metadata": {},
    "outputs": [],
@@ -94,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "1ec7eb77",
    "metadata": {},
    "outputs": [],
@@ -102,11 +89,13 @@
     "cases = [\n",
     "\"\"\"\n",
     "vxOoOoVvx\n",
+    "\n",
     "vxx\n",
     "\"\"\"\n",
     ",\n",
     "\"\"\"\n",
     "abBa\n",
+    "\n",
     "aa\n",
     "\"\"\"\n",
     ",\n",
@@ -119,30 +108,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "b1cd949d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class tester:\n",
+    "def test(case):\n",
+    "    lines = case.split(\"\\n\")[1:-1]\n",
+    "    inp = lines[0]\n",
+    "    expected = lines[-1]\n",
+    "    actual = convert_to_good_string(inp)\n",
     "    \n",
-    "    def test_all(self, cases, f):\n",
-    "        for i, case in enumerate(cases):\n",
-    "            print('case', i+1, end='\\t')\n",
-    "            self.test(case, f)        \n",
-    "    \n",
-    "    def test(self, case, f):\n",
-    "        try:\n",
-    "            lines = case.split(\"\\n\")[1:-1]\n",
-    "            inp = lines[0]\n",
-    "            outp = lines[1]\n",
+    "    if actual == expected:\n",
+    "        print('pass')\n",
+    "    else:\n",
+    "        print('fail')\n",
     "\n",
-    "            if f(inp) == outp:\n",
-    "                print('pass')\n",
-    "            else:\n",
-    "                print('fail')\n",
-    "        except e:\n",
-    "            print(e)"
+    "    print('\\texpected', expected)\n",
+    "    print('\\tactual  ', actual)"
    ]
   },
   {
@@ -155,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "f47d50d3",
    "metadata": {},
    "outputs": [
@@ -163,47 +146,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "case 1\tpass\n",
-      "case 2\tpass\n",
-      "case 3\tpass\n"
+      "pass\n",
+      "\texpected vxx\n",
+      "\tactual   vxx\n",
+      "pass\n",
+      "\texpected aa\n",
+      "\tactual   aa\n",
+      "pass\n",
+      "\texpected \n",
+      "\tactual   \n"
      ]
     }
    ],
    "source": [
-    "t=tester()\n",
-    "t.test_all(cases, convert_to_good_string)"
+    "test(cases[0])\n",
+    "test(cases[1])\n",
+    "test(cases[2])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "f420fed1",
+   "cell_type": "raw",
+   "id": "b0b646c3-7f84-497f-897d-1f6911043d49",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nрешим эту задачу без использования рекурсии. будем проходить по строке И сохранять то что прошли в массиве символов gs. \\nБудем использовать именно массив, так как строковый тип в Python является неизменяемым, а нам понадобится делать изменение.\\nНачиная со второго элемента будем сравнивать его с пердыдущим. Если окажется что они отличаются регистром, \\nто удалим из gs последний элемент, а если нет, то добавим этот элемент в gs. Для проверки будем использовать метод str.lower(). \\nВ результате соберем из gs строку.\\n'"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
-    "решим эту задачу без использования рекурсии. будем проходить по строке И сохранять то что прошли в массиве символов gs. \n",
+    "Решим эту задачу без использования рекурсии. будем проходить по строке И сохранять то, что прошли в массиве символов gs. \n",
     "Будем использовать именно массив, так как строковый тип в Python является неизменяемым, а нам понадобится делать изменение.\n",
     "Начиная со второго элемента будем сравнивать его с пердыдущим. Если окажется что они отличаются регистром, \n",
     "то удалим из gs последний элемент, а если нет, то добавим этот элемент в gs. Для проверки будем использовать метод str.lower(). \n",
-    "В результате соберем из gs строку.\n",
-    "\"\"\""
+    "В результате соберем из gs строку."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "id": "d8cb6927",
    "metadata": {},
    "outputs": [],
@@ -228,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "edaf75fa",
    "metadata": {},
    "outputs": [
@@ -236,14 +211,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "case 1\tpass\n",
-      "case 2\tpass\n",
-      "case 3\tpass\n"
+      "pass\n",
+      "\texpected vxx\n",
+      "\tactual   vxx\n",
+      "pass\n",
+      "\texpected aa\n",
+      "\tactual   aa\n",
+      "pass\n",
+      "\texpected \n",
+      "\tactual   \n"
      ]
     }
    ],
    "source": [
-    "t.test_all(cases, convert_to_good_string)"
+    "test(cases[0])\n",
+    "test(cases[1])\n",
+    "test(cases[2])"
    ]
   },
   {
@@ -287,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
