--- a/Yandex.Contest.20/G. Paths in Tree.ipynb
+++ b/Yandex.Contest.20/G. Paths in Tree.ipynb
@@ -1,29 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "23256a56",
+   "cell_type": "markdown",
+   "id": "051e671b-a11e-42bc-aca2-c9bf3af86069",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nДано укоренённое дерево на N вершинах и число X. В каждой вершине записано число — её вес. \\nНазовём восходящим путь ai,p(ai),p(p(ai)),..., где p(a) — родитель вершины a. \\nПроще говоря, восходящий путь — это путь, который начинается с некоторой вершины и двигается в сторону корня \\n(не обязательно доходя до него). Путь может состоять из одной вершины. Весом пути назовём суммарный вес вершин на этом пути.\\nНайдите количество восходящих путей с весом X. Вы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\\n\\nФормат ввода\\nВ первой строке дано число вершин n (1≤n≤2⋅10**5) и число X (−10**9≤X≤10**9).\\nВ следующих n строках по одной в строке заданы вершины. \\ni-я вершина задаётся двумя числами — pi и wi, записанными через пробел. \\npi — это либо номер вершины-родителя вершины i, в этом случае 0≤pi≤n−1, \\nлибо −1, если вершина i является корнем. \\nwi — это вес вершины i(−10**4≤wi≤10**4).\\n\\nФормат вывода\\nВыведите одно целое число — количество восходящих путей веса X.\\n\\nПример 1\\nВвод\\n6 3\\n-1 1\\n0 1\\n0 1\\n1 1\\n2 2\\n3 1\\nВывод\\n3\\n\\nПример 2\\nВвод\\n1 2\\n-1 1\\nВывод\\n0\\n'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
+    "<h1>Пути в дереве</h1>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "71f6045f-50ea-4819-9fd1-b32261b4aecf",
+   "metadata": {},
+   "source": [
     "Дано укоренённое дерево на N вершинах и число X. В каждой вершине записано число — её вес. \n",
     "Назовём восходящим путь ai,p(ai),p(p(ai)),..., где p(a) — родитель вершины a. \n",
     "Проще говоря, восходящий путь — это путь, который начинается с некоторой вершины и двигается в сторону корня \n",
     "(не обязательно доходя до него). Путь может состоять из одной вершины. Весом пути назовём суммарный вес вершин на этом пути.\n",
-    "Найдите количество восходящих путей с весом X. Вы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\n",
+    "Найдите количество восходящих путей с весом X.\n",
     "\n",
     "Формат ввода\n",
     "В первой строке дано число вершин n (1≤n≤2⋅10**5) и число X (−10**9≤X≤10**9).\n",
@@ -53,36 +47,28 @@
     "1 2\n",
     "-1 1\n",
     "Вывод\n",
-    "0\n",
-    "\"\"\""
+    "0"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "dab7e945",
+   "cell_type": "markdown",
+   "id": "67598967-03c2-4a41-8d53-185bf87fe652",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nБудем идти от корня и строить все пути рекурсивно. Потом подсчитаем вес каждого и вычислим сколько из них равны X.\\n'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
-    "Будем идти от корня и строить все пути рекурсивно. Потом подсчитаем вес каждого и вычислим сколько из них равны X.\n",
-    "\"\"\""
+    "<h2>Решение</h2>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "9b1c9761-5b28-4efd-8e9d-0b4e645998f6",
+   "metadata": {},
+   "source": [
+    "Будем идти от корня и строить все пути рекурсивно. Потом подсчитаем вес каждого и вычислим сколько из них равны X."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5b1289d2",
    "metadata": {},
    "outputs": [],
@@ -135,14 +121,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1021a6ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a4ff54e7",
    "metadata": {},
    "outputs": [],
@@ -150,12 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d076b916",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cases=[\"\"\"\n",
+    "cases=[\n",
+    "\"\"\"\n",
     "6 3\n",
     "-1 1\n",
     "0 1\n",
@@ -163,12 +142,14 @@
     "1 1\n",
     "2 2\n",
     "3 1\n",
+    "\n",
     "3\n",
     "\"\"\"\n",
     ",\n",
     "\"\"\"\n",
     "1 2\n",
     "-1 1\n",
+    "\n",
     "0\n",
     "\"\"\"\n",
     "]"
@@ -182,11 +163,8 @@
    "outputs": [],
    "source": [
     "def parse_case(raw_case: str) -> dict:\n",
-    "    inp = {}\n",
     "    lines = raw_case.split('\\n')[1:-1]\n",
     "    n, x = map(int, lines[0].split())\n",
-    "    inp['x'] = x\n",
-    "    \n",
     "    nodes = []\n",
     "    root = None\n",
     "    for i in range(n):\n",
@@ -197,11 +175,8 @@
     "    for i in range(n):\n",
     "        if nodes[i].parent != -1:\n",
     "            nodes[nodes[i].parent].children.append(nodes[i])\n",
-    "    inp['root'] = root\n",
     "    \n",
-    "    outp = lines[-1].strip()\n",
-    "    \n",
-    "    return {'inp': inp, 'outp': outp}"
+    "    return root, x"
    ]
   },
   {
@@ -213,7 +188,7 @@
     {
      "data": {
       "text/plain": [
-       "{'inp': {'x': 3, 'root': <__main__.Node at 0x1bbde25ffd0>}, 'outp': '3'}"
+       "(<__main__.Node at 0x21ca2b85fc0>, 3)"
       ]
      },
      "execution_count": 6,
@@ -227,33 +202,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "28ab40fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class tester:\n",
-    "    \n",
-    "    def test_all(self, cases, f):\n",
-    "        for i, case in enumerate(cases):\n",
-    "            print('case', i+1, end='\\t')\n",
-    "            self.test(case, f)        \n",
-    "    \n",
-    "    def test(self, case, f):\n",
-    "        try:\n",
-    "            expected = case['outp']\n",
-    "            result = str(f(**case['inp']))\n",
-    "            if expected == result:\n",
-    "                print('pass')\n",
-    "            else:\n",
-    "                print('fail', '(expected', expected, ', result', result, ')')\n",
-    "        except e:\n",
-    "            print(e)"
+    "def test(case):\n",
+    "    lines = case.split('\\n')[1:-1]\n",
+    "    root, x = parse_case(case)\n",
+    "    expected = int(lines[-1])\n",
+    "    actual = get_number_of_upgoing_paths(root, x)\n",
+    "    if expected == actual:\n",
+    "        print('pass')\n",
+    "    else:\n",
+    "        print('fail')\n",
+    "    print('\\texpected', expected)\n",
+    "    print('\\tactual  ', actual)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "1322f412",
    "metadata": {},
    "outputs": [
@@ -261,45 +230,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "case 1\tpass\n",
-      "case 2\tpass\n"
+      "pass\n",
+      "\texpected 3\n",
+      "\tactual   3\n",
+      "pass\n",
+      "\texpected 0\n",
+      "\tactual   0\n"
      ]
     }
    ],
    "source": [
-    "tester().test_all(map(parse_case, cases), get_number_of_upgoing_paths)"
+    "test(cases[0])\n",
+    "test(cases[1])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "a816c613",
+   "cell_type": "raw",
+   "id": "a3ccc907-da64-41c8-b35d-e8274502ffd4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nна самом деле нет смысла тащить пути которые не будут продолжены. Нужно лишь узнать сколько из них имееют сумму X\\nи обновить счетчик. Более того нам вообще не нужно тащить пути, нужно лишь тащить веса путей которые могут быть продолжены.\\n'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
-    "на самом деле нет смысла тащить пути которые не будут продолжены. Нужно лишь узнать сколько из них имееют сумму X\n",
-    "и обновить счетчик. Более того нам вообще не нужно тащить пути, нужно лишь тащить веса путей которые могут быть продолжены.\n",
-    "\"\"\""
+    "На самом деле нет смысла тащить пути которые не будут продолжены. Нужно лишь узнать сколько из них имееют сумму X\n",
+    "и обновить счетчик. Более того нам вообще не нужно тащить пути, нужно лишь тащить веса путей которые могут быть продолжены."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "59ed222c",
+   "cell_type": "raw",
+   "id": "f1461e9f-8f27-41d8-bd37-035f1f4b7950",
    "metadata": {},
-   "outputs": [],
    "source": [
     "def get_paths_weights(node, x):\n",
     "    \n",
@@ -336,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "a8187586",
    "metadata": {},
    "outputs": [
@@ -344,13 +301,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "case 1\tpass\n",
-      "case 2\tpass\n"
+      "pass\n",
+      "\texpected 3\n",
+      "\tactual   3\n",
+      "pass\n",
+      "\texpected 0\n",
+      "\tactual   0\n"
      ]
     }
    ],
    "source": [
-    "tester().test_all(map(parse_case, cases), get_number_of_upgoing_paths)"
+    "test(cases[0])\n",
+    "test(cases[1])"
    ]
   },
   {
@@ -362,31 +324,16 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "cf78301a",
+   "cell_type": "raw",
+   "id": "354197d0-a724-4129-a5d9-6e92e328536f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nМожно также решить эту задачу без использования рекурсии\\n'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
-    "Можно также решить эту задачу без использования рекурсии\n",
-    "\"\"\""
+    "Можно также решить эту задачу без использования рекурсии"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "ddde3c90",
    "metadata": {},
    "outputs": [],
@@ -439,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "0884320b",
    "metadata": {},
    "outputs": [
@@ -447,13 +394,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "case 1\tpass\n",
-      "case 2\tpass\n"
+      "pass\n",
+      "\texpected 3\n",
+      "\tactual   3\n",
+      "pass\n",
+      "\texpected 0\n",
+      "\tactual   0\n"
      ]
     }
    ],
    "source": [
-    "tester().test_all(map(parse_case, cases), get_number_of_upgoing_paths)"
+    "test(cases[0])\n",
+    "test(cases[1])"
    ]
   },
   {
