--- a/Yandex.Contest.20/H. Sizifus.ipynb
+++ b/Yandex.Contest.20/H. Sizifus.ipynb
@@ -1,28 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 109,
-   "id": "47ba9839-409f-40c7-b0da-08d89cc1979a",
+   "cell_type": "markdown",
+   "id": "f14f2ba1-8d90-4a81-96a5-a25081a09bb2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nВ этой задаче вы будете перекладывать камни. Изначально есть n кучек камней. Кучка i весит a[i] килограммов. Кучки можно объединять. \\nПри объединении кучек i и j затрачивается a[i]+a[j] единиц энергии, при этом две исходные кучки пропадают и появляется кучка весом a[i]+a[j]. \\nОпределите наименьшее количество энергии, которое надо затратить для объединения всех кучек в одну.\\nВы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\\n\\nФормат ввода\\nВ первой строке дано число n (1≤n≤10**5)\\nВ следующей строке записаны массы кучек через пробел — a[i] (1≤a[i]≤10**6)\\n\\nФормат вывода\\nВыведите единственное число — минимальную энергию, которую надо затратить на объединение всех кучек.\\n\\nПример 1\\nВвод\\n2\\n2 6\\nВывод\\n8\\n\\nПример 2\\nВвод\\n3\\n6 2 4\\nВывод\\n18\\n'"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
+    "<h1>Сизиф</h1>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "3de8c71f-61c9-4719-b479-7784b4938294",
+   "metadata": {},
+   "source": [
     "В этой задаче вы будете перекладывать камни. Изначально есть n кучек камней. Кучка i весит a[i] килограммов. Кучки можно объединять. \n",
     "При объединении кучек i и j затрачивается a[i]+a[j] единиц энергии, при этом две исходные кучки пропадают и появляется кучка весом a[i]+a[j]. \n",
     "Определите наименьшее количество энергии, которое надо затратить для объединения всех кучек в одну.\n",
-    "Вы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\n",
     "\n",
     "Формат ввода\n",
     "В первой строке дано число n (1≤n≤10**5)\n",
@@ -43,117 +36,30 @@
     "3\n",
     "6 2 4\n",
     "Вывод\n",
-    "18\n",
-    "\"\"\""
+    "18"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 110,
-   "id": "86356662-95bb-4d3e-983e-2550bbf158e5",
+   "cell_type": "markdown",
+   "id": "082ce48a-6ec4-4b47-b4a8-b53133c859ca",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cases = [\n",
-    "\"\"\"\n",
-    "2\n",
-    "2 6\n",
-    "8\n",
-    "\"\"\"\n",
-    ",\n",
-    "\"\"\"\n",
-    "3\n",
-    "6 2 4\n",
-    "18\n",
-    "\"\"\"\n",
-    "]"
+    "<h2>Решение</h2>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 111,
-   "id": "d1bc2910-fe2e-427e-81fd-f3a8bbafec27",
+   "cell_type": "raw",
+   "id": "6d7751b9-07b9-401d-b35f-9b2a31d18749",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def parse_case(case):\n",
-    "    lines = case.split('\\n')[1:-1]\n",
-    "    n = int(lines[0])\n",
-    "    stones = list(map(int, lines[1].split()))\n",
-    "    energy = int(lines[-1])\n",
-    "    return {'input': stones, 'output': energy}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "id": "8feb3ad4-ca3b-4ee9-bb97-888b79babe4b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'input': [2, 6], 'output': 8}"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parse_case(cases[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "id": "02cc1080-b300-4d75-b894-9bec1b6bbe7d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'input': [6, 2, 4], 'output': 18}"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parse_case(cases[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "id": "4c349afe-d956-4111-bcfe-280660d895ab",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nЧтобы получить наименьшую энергию нужно объединять наименьшие по весу камни, так как чем раньше объединены камни, \\nтем большее количество раз их вес войдет в общую энергию. На каждой итерации будем искать пары с минимальными весами. Объединение дописывать в конец,\\nа в доп массив записывать использованные индексы. И конечно обновлять счетчик энергии.\\n'"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
     "Чтобы получить наименьшую энергию нужно объединять наименьшие по весу камни, так как чем раньше объединены камни, \n",
     "тем большее количество раз их вес войдет в общую энергию. На каждой итерации будем искать пары с минимальными весами. Объединение дописывать в конец,\n",
-    "а в доп массив записывать использованные индексы. И конечно обновлять счетчик энергии.\n",
-    "\"\"\""
+    "а в доп массив записывать использованные индексы. И конечно обновлять счетчик энергии."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "id": "b100bda6-c820-46b6-8457-29c78059960f",
    "metadata": {},
    "outputs": [],
@@ -191,28 +97,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "3b0ffb4a-2869-4e62-bedc-b94c5333aa42",
+   "execution_count": 11,
+   "id": "86356662-95bb-4d3e-983e-2550bbf158e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'input': [2, 6], 'output': 8}\n",
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "case = parse_case(cases[0])\n",
-    "print(case)\n",
-    "print(get_energy_for_union(case['input']))"
+    "cases = [\n",
+    "\"\"\"\n",
+    "2\n",
+    "2 6\n",
+    "\n",
+    "8\n",
+    "\"\"\"\n",
+    ",\n",
+    "\"\"\"\n",
+    "3\n",
+    "6 2 4\n",
+    "\n",
+    "18\n",
+    "\"\"\"\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 12,
+   "id": "3b0ffb4a-2869-4e62-bedc-b94c5333aa42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(case):\n",
+    "    lines = case.split('\\n')[1:-1]\n",
+    "    n = int(lines[0])\n",
+    "    stones = list(map(int, lines[1].split()))\n",
+    "    expected = int(lines[-1])\n",
+    "    actual = get_energy_for_union(stones)\n",
+    "    if expected == actual:\n",
+    "        print('pass')\n",
+    "    else:\n",
+    "        print('fail')\n",
+    "    print('\\texpected', expected)\n",
+    "    print('\\tactual  ', actual)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "35bd39f2-e293-4ff8-b83b-f3729ccc0706",
    "metadata": {},
    "outputs": [
@@ -220,38 +150,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'input': [6, 2, 4], 'output': 18}\n",
-      "18\n"
+      "pass\n",
+      "\texpected 8\n",
+      "\tactual   8\n",
+      "pass\n",
+      "\texpected 18\n",
+      "\tactual   18\n"
      ]
     }
    ],
    "source": [
-    "case = parse_case(cases[1])\n",
-    "print(case)\n",
-    "print(get_energy_for_union(case['input']))"
+    "test(cases[0])\n",
+    "test(cases[1])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 118,
-   "id": "b0c9bdb5-7dda-40f0-b8f5-31ea7d1fc475",
+   "cell_type": "raw",
+   "id": "ed90bd47-9915-4134-beba-7c2dd80308b8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nЕще один cпособ решения - это отсортировать массив, а новые кучки вставлять в нужное место, чтобы он оставался отсортированным.\\n'"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
-    "Еще один cпособ решения - это отсортировать массив, а новые кучки вставлять в нужное место, чтобы он оставался отсортированным.\n",
-    "\"\"\""
+    "Еще один cпособ решения - это отсортировать массив, а новые кучки вставлять в нужное место, чтобы он оставался отсортированным."
    ]
   },
   {
@@ -264,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 17,
    "id": "2967e970-d20a-470f-a262-8bd036bf8102",
    "metadata": {},
    "outputs": [],
@@ -295,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 19,
    "id": "cb3f2c27-d5d7-4e87-acc2-983561314790",
    "metadata": {},
    "outputs": [
@@ -303,53 +221,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'input': [2, 6], 'output': 8}\n",
-      "8\n"
+      "pass\n",
+      "\texpected 8\n",
+      "\tactual   8\n",
+      "pass\n",
+      "\texpected 18\n",
+      "\tactual   18\n"
      ]
     }
    ],
    "source": [
-    "case = parse_case(cases[0])\n",
-    "print(case)\n",
-    "print(get_energy_for_union(case['input']))"
+    "test(cases[0])\n",
+    "test(cases[1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "id": "f97f60c4-e546-40cc-abb8-2aae4255f480",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'input': [6, 2, 4], 'output': 18}\n",
-      "18\n"
-     ]
-    }
-   ],
-   "source": [
-    "case = parse_case(cases[1])\n",
-    "print(case)\n",
-    "print(get_energy_for_union(case['input']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94f84def-1c5c-4ba6-b5a7-4f107f834044",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca4779f0-6086-442a-adca-35f6748b3834",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
