--- a/Yandex.Contest.20/I. Partial Reverse.ipynb
+++ b/Yandex.Contest.20/I. Partial Reverse.ipynb
@@ -1,13 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bd318c35-47a7-4dd1-b228-0272f52a499c",
+   "metadata": {},
+   "source": [
+    "<h1>Частичный разворот</h1>"
+   ]
+  },
+  {
    "cell_type": "raw",
    "id": "4acb4f3e-fbea-4a9b-911d-6a815f87bac1",
    "metadata": {},
    "source": [
-    "\"\"\"\n",
     "В этой задаче требуется сделать разворот части односвязного списка. Каждая вершина списка описывается структурой Node, каждый экземпляр хранит указатель на следующую вершину или null (nullptr, None, nil), если вершина последняя. По заданным индексам from и to разверните все вершины на отрезке с from до to включительно. Заметьте, что нумерация в индексах from и to с единицы.\n",
-    "Вы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\n",
     "\n",
     "Формат ввода\n",
     "Реализуйте функцию Reverse, которая принимает голову списка и два целочисленных индекса. Подробные сигнатуры указаны в шаблонах на диске.\n",
@@ -22,8 +28,15 @@
     "1-->2-->3-->4-->5\n",
     "2, 4\n",
     "Вывод\n",
-    "1-->4-->3-->2-->5\n",
-    "\"\"\""
+    "1-->4-->3-->2-->5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d2c9356-db77-4b82-a3e4-ebd1ed2f19da",
+   "metadata": {},
+   "source": [
+    "<h2>Решение</h2"
    ]
   },
   {
@@ -31,11 +44,9 @@
    "id": "8b7a19d6-141c-41e9-bf3e-9f9e95c5ad40",
    "metadata": {},
    "source": [
-    "\"\"\"\n",
     "Сначала найдем первый элемент который нужно реверсировать. Назовем его left_node. Его предшественник будет pre_left_node. \n",
     "При это он может быть None, если left_node == head. затем будем разворачивать ссылки последующих нодов в обратную сторону и обновлять left_node.\n",
-    "Все это время pre_left_node будет ссылаться на node (изначально left_node), который будет проходить вперед по списку. В конце нужно сделать ссылку на новый left node. Но если pre_left_node == None, то новая голова будет новый left_node.\n",
-    "\"\"\""
+    "Все это время pre_left_node будет ссылаться на node (изначально left_node), который будет проходить вперед по списку. В конце нужно сделать ссылку на новый left node. Но если pre_left_node == None, то новая голова будет новый left_node."
    ]
   },
   {
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "id": "90f8d5ca-44c4-4928-9706-357bd69e2e95",
    "metadata": {},
    "outputs": [],
@@ -97,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "20b8ee5c-e511-439f-8f7c-d0d9d0a4308f",
    "metadata": {},
    "outputs": [],
@@ -118,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "id": "174eb7b6-9daa-4c95-956c-df0e0eaa62ec",
    "metadata": {},
    "outputs": [],
@@ -152,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "id": "14c0096e-7fa2-494c-bbc7-715be115ffe6",
    "metadata": {},
    "outputs": [
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "id": "519f94b3-98ae-4668-ae6f-ba22c4b6dc61",
    "metadata": {},
    "outputs": [],
@@ -181,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "id": "7460ad12-9ab0-47c9-9229-fbe6e2d68be4",
    "metadata": {},
    "outputs": [
@@ -207,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "id": "c9edd7f0-3b88-4c55-aec6-a5aea4e67f96",
    "metadata": {},
    "outputs": [
@@ -226,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "id": "1761457f-0b82-497a-9542-1faddec8f521",
    "metadata": {},
    "outputs": [
@@ -252,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "id": "239eadde-35cc-44eb-a6f5-279381cda1fa",
    "metadata": {},
    "outputs": [
@@ -271,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "id": "010181f1-7ac7-4246-b14f-bf1b78a1838c",
    "metadata": {},
    "outputs": [
@@ -297,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "id": "4726a1dd-32fd-4cc3-bd02-3734e7f8a740",
    "metadata": {},
    "outputs": [
@@ -316,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "id": "a64a1887-cf83-44f1-a759-b48eb3111070",
    "metadata": {},
    "outputs": [
@@ -342,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "id": "2b7119e7-ad11-4874-a8d0-f922557a3a64",
    "metadata": {},
    "outputs": [
@@ -361,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "id": "db79d7d2-ad80-48fa-a8a8-77f57dbc905d",
    "metadata": {},
    "outputs": [
@@ -388,23 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1715131-0d71-49c9-b79b-ebc62de62aa1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a9f89a3-ea7a-46c2-92a2-53dd32ce8dbb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c105be1-5cf5-418e-b9b5-92dfcd1cfbe1",
+   "id": "e9fea376-b86e-468c-a4c7-05c708d3f314",
    "metadata": {},
    "outputs": [],
    "source": []
